# chess

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.yml  play.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml
board/: chess_board.py  config.yml  displayer_factory.py  engine.py  files.py  game.py  players.py  terminal_view.py  view.py
board/view/: __init__.py  displayer_factory.py  pygame_view.py  terminal_view.py
chess_pieces/: __init__.py  abstract.py  bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py  schema.py
scripts/: upgrade-python.sh
src/: config.yml  play.py
src/board/: engine.py  game.py  players.py
src/board/view/: __init__.py  displayer_factory.py  pygame_view.py  terminal_view.py
src/pieces/: __init__.py  abstract.py  bishop.py  color.py  king.py  knight.py  pawn.py  queen.py  rook.py  schema.py
tests/: conftest.py  test_config.yml
tests/board/: test_players.py
tests/board/engine/: test_bishop_rules.py  test_engine.py  test_game_rules.py  test_handle_game.py  test_king_rules.py  test_knight_rules.py  test_pawn_rules.py  test_queen_rules.py  test_rook_rules.py
tests/pieces/: test_bishop.py  test_chess_pieces.py  test_king.py  test_knight.py  test_pawn.py  test_queen.py  test_rook.py
